# joliGAN

./: setup.cfg  tox.ini  train.py
data/: base_dataset.py
docs/source/_static/: openapi.json
models/: base_model.py  cut_model.py  palette_model.py
options/: base_options.py  common_options.py  inference_diffusion_options.py  inference_gan_options.py  train_options.py
scripts/: gen_single_image.py  gen_single_image_diffusion.py  save.json
server/: joligen_api.py
tests/: test_run_diffusion_online.py  test_run_semantic_mask_online.py
