[metadata]
name = joliGAN
home-page = https://github.com/jolibrain/joliGAN
summary = Image-to-Image Translation for Domain Adaptation 
author = Jolibrain
author-email = emmanuel.benazera@jolibrain.com
classifier =
    Intended Audience :: Information Technology
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    joliGAN

install_requires =
    torch>=0.4.1
    torchvision>=0.2.1
    dominate>=2.3.1
    visdom>=0.1.8.3

[options.entry_points]
console_scripts =
    joligan_train = train
